14-linkerd/linkerd-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: linkerd-dashboard
  annotations:
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  namespace: linkerd
spec:
  tls:
    - hosts:
        - linkerd-dashboard.<YOUR_NAME>.metakube.io
  rules:
    - host: linkerd-dashboard.<YOUR_NAME>.metakube.io
      http:
        paths:
          - path: /
            backend:
              serviceName: linkerd-web
              servicePort: 8084
